// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages component reders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count"
  >
    4
  </div>
</div>
`;

exports[`Messages component renders the UI for zero messages as expected 1`] = `
<div
  className="messages"
>
  Messages
</div>
`;
